[project]
name = "hostel-feedback-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi>=0.128.0",
    "greenlet>=3.3.1",
    "loguru>=0.7.3",
    "openai>=2.16.0",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.22",
    "sqlalchemy>=2.0.46",
    "twilio>=9.10.0",
    "uvicorn>=0.40.0",
    "websockets>=11.0,<13.0",
]
